Add assets, text and start writing CSS

--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link href="/resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div id="header-banner">
+    <header id="header-banner">
       <h1>Discover hidden places in the world around you</h1>
-    </div>
-    <nav>
+      <nav>
+        <p class="link"><a href="#header-banner">Download Excursion (Coming soon!)</a></p>
+      </nav>
+      <p id="iphone-video"><video src="resources/videos/excursion.mp4" autoplay loop></p>
+    </header>
+    <main>
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <p><img src="resources/images/camp.jpg"></p>
+      <p><img src="resources/images/phone.png"></p>
+      <h3>Coming Soon for iPhone and Android</h3>
       <p class="link"><a href="#header-banner">Download Excursion (Coming soon!)</a></p>
-    </nav>
+    </main>
+    <footer>
+      &copy; Excursion
+    </footer>
   </body>
 </html>
