--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <main>
       <h2>Your personal travel guide</h2>
       <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-      <p><img src="resources/images/camp.jpg"></p>
-      <p><img src="resources/images/phone.png"></p>
+      <p><img src="resources/images/camp.jpg" alt="Camp setup at night"></p>
+      <p><img src="resources/images/phone.png" alt="iPhone Logo"></p>
       <h3>Coming Soon for iPhone and Android</h3>
       <p class="link"><a href="#header-banner">Download Excursion (Coming soon!)</a></p>
     </main>
