Continue to add CSS code, alter HTML to remove class from links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header id="header-banner">
       <h1>Discover hidden places in the world around you</h1>
       <nav>
-        <p class="link"><a href="#header-banner">Download Excursion (Coming soon!)</a></p>
+        <p><a href="#header-banner">Download Excursion (Coming soon!)</a></p>
       </nav>
       <p id="iphone-video"><video src="resources/videos/excursion.mp4" autoplay loop></p>
     </header>
@@ -19,7 +19,7 @@
       <p><img src="resources/images/camp.jpg" alt="Camp setup at night"></p>
       <p><img src="resources/images/phone.png" alt="iPhone Logo"></p>
       <h3>Coming Soon for iPhone and Android</h3>
-      <p class="link"><a href="#header-banner">Download Excursion (Coming soon!)</a></p>
+      <p><a href="#header-banner">Download Excursion (Coming soon!)</a></p>
     </main>
     <footer>
       &copy; Excursion
