--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
       <p><img src="resources/images/camp.jpg" alt="Camp setup at night"></p>
       <p><img src="resources/images/phone.png" alt="iPhone Logo"></p>
-      <h3>Coming Soon for iPhone and Android</h3>
+      <h2>Coming Soon for iPhone and Android</h2>
       <p><a href="#header-banner">Download Excursion (Coming soon!)</a></p>
     </main>
     <footer>
-      &copy; Excursion
+      <p>&copy; Excursion</p>
     </footer>
   </body>
 </html>
