Amended footer, final commit

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <h2>Coming Soon for iPhone and Android</h2>
       <p><a href="#header-banner">Download Excursion (Coming soon!)</a></p>
     </main>
-    <footer>
+    <div class="footer">
       <p>&copy; Excursion</p>
-    </footer>
+    </div>
   </body>
 </html>
